Email поменял ибо не робил сучий

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "2two2d",
-            "email": "qwe@qwe"
+            "email": "notmax2000@mail.ru"
         }
     ],
     "minimum-stability": "dev",
